--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     <br>
     <button>Google Search</button><button>I'm Feeling Lucky</button>
   </div>
+  <div>
+    <ul id="footer">
+      <li>Ireland</li>
+      <li>Advertising</li>
+      <li>Business</li>
+    </ul>
+  </div>
 </body>
 
 </html>
